<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewArrowBackLogin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/textviewTitleRegisterLogin"
            style="@style/Text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/title_login" />

        <TextView
            android:id="@+id/textviewSubtitleRegisterLogin"
            style="@style/Text_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/subtitle_login" />

        <EditText
            android:id="@+id/editTextEmailLogin"
            style="@style/Text_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/text_hint_email_login"
            android:inputType="textAutoComplete" />

        <EditText
            android:id="@+id/editTextPasswordLogin"
            style="@style/Text_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/text_hint_password_login"
            android:inputType="textAutoComplete" />

        <Button
            android:id="@+id/buttonRegisterLogin"
            style="@style/Text_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_button"
            android:text="@string/text_button_login" />

        <TextView
            android:id="@+id/textviewForgotPasword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/text_forgot_password_login"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>